--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,7 +1,7 @@
 @font-face {
-                                font-family: roboto;
+                                font-family: raleway;
                                 font-display: swap;
-                                src: url("../fonts/roboto-bold.woff2") format("woff2"), url("../fonts/roboto-bold.woff") format("woff");
-                                font-weight: 700;
+                                src: url("../fonts/raleway-v28-latin-700.woff2") format("woff2"), url("../fonts/raleway-v28-latin-700.woff") format("woff");
+                                font-weight: 400;
                                 font-style: normal;
                             }
